docs/traefik-tls-certificate/echo-apple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apple-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.frontend.priority: "1"
spec:
  rules:
  - http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
